# opencami

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CODE_REVIEW.md  README.md  REVIEW.md  STREAMING-DEEP-DIVE.md  capacitor.config.ts  package-lock.json  package.json  package.json.bak  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml  release.yml
android/app/: build.gradle
docs/: API.md  CHANGELOG.md  FEATURES.md  README.md  architecture.md  changelog.md  contributing.md  deployment.md  faq.md  features.md
docs/connectivity/: mental-model.md  origins.md  ws-wss-explained.md
docs/operations/: backups.md  health-checks.md  logs-debugging.md  updates.md
docs/reference/: cli-reference.md  config-reference.md  faq.md
docs/setup/: env-vars.md  local-local.md  local-remote.md  remote-remote.md  security-basics.md
docs/troubleshooting/: checklist.md  errors.md  index.md
public/: manifest.json  sw.js
scripts/: generate-pwa-icons.mjs
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/__tests__/: setup.ts
src/components/: attachment-button.tsx  attachment-preview.tsx  command-help.tsx  keyboard-shortcuts-dialog.tsx  model-selector.tsx  persona-picker.tsx
src/data/: personas.json
src/hooks/: use-chat-settings.ts  use-keyboard-shortcuts.ts  use-llm-settings.ts  use-notifications.ts  use-search.ts  use-skills.ts  use-thinking-level.ts
(+102 files in other folders)
