[package]
name = "opencami-desktop"
version = "1.4.0"
description = "OpenCami desktop wrapper"
authors = ["Robby (robbyczgw-cla)"]
license = "MIT"
repository = "https://github.com/robbyczgw-cla/opencami"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
uuid = { version = "1", features = ["v4"] }
